fix: center text Session on registration when overflowing in farsi

--- a/_locales/fa/messages.json
+++ b/_locales/fa/messages.json
@@ -62,7 +62,7 @@
   "unableToLoadAttachment": "ناتوانی در بارگذاری پیوست انتخابی.",
   "offline": "آفلاین",
   "debugLog": "گزارش خطا",
-  "showDebugLog": "Export Logs",
+  "showDebugLog": "استخراج گزارش‌ها",
   "shareBugDetails": "گزارش‌های خود را صادر کنید، سپس فایل را از طریق Session's Help Desk آپلود کنید.",
   "goToReleaseNotes": "رفتن به یادداشت های ریلیز",
   "goToSupportPage": "رفتن به صفحه پشتیبانی",
@@ -114,6 +114,7 @@
   "clear": "پاک ",
   "clearAllData": "پاک کردن همه داتا",
   "deleteAccountWarning": "این کار پیام‌ها و مخاطبین شما را برای همیشه حذف می‌کند.",
+  "deleteAccountFromLogin": "Are you sure you want to clear your device?",
   "deleteContactConfirmation": "آیا مطمئن هستید که می‌خواهید این مکالمه را حذف کنید؟",
   "quoteThumbnailAlt": "پیش‌نمایش تصویر از پیام نقل قول شده",
   "imageAttachmentAlt": "تصویر پیوست شده به پیام",
@@ -352,7 +353,7 @@
   "searchFor...": "جستجو در مکالمات یا مخاطبین",
   "searchForContactsOnly": "جستجو در مخاطبین",
   "enterSessionID": "شناسه Session را وارید کنید",
-  "enterSessionIDOfRecipient": "آیدی Session یا ons مخاطبت رو وارد کن",
+  "enterSessionIDOfRecipient": "آیدی Session یا ONS مخاطبت رو وارد کن",
   "message": "پیام",
   "appearanceSettingsTitle": "ظاهر",
   "privacySettingsTitle": "حریم خصوصی",
@@ -485,6 +486,7 @@
   "clearAllReactions": "آیا مطمئن هستید میخواید کل $emoji$ را پاک کنید؟",
   "expandedReactionsText": "نمایش کمتر",
   "reactionNotification": "به یک پیام با $emoji$ واکنش بده",
+  "rateLimitReactMessage": "Slow down! You've sent too many emoji reacts. Try again soon",
   "otherSingular": "$number$ دیگر",
   "otherPlural": "$number$ دیگران",
   "reactionPopup": "واکنش داده با",
