--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -118,7 +118,7 @@
   "deleteContactConfirmation": "Are you sure you want to delete this conversation?",
   "quoteThumbnailAlt": "Thumbnail of image from quoted message",
   "imageAttachmentAlt": "Image attached to message",
-  "videoAttachmentAlt": "Screenshot of video attached to message",
+  "videoAttachmentAlt": "Screenshot of video in message",
   "lightboxImageAlt": "Image sent in conversation",
   "imageCaptionIconAlt": "Icon showing that this image has a caption",
   "addACaption": "Add a caption...",
