fix: display "X active members" for communities in convo header

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -363,6 +363,7 @@
   "recoveryPhraseEmpty": "Enter your recovery phrase",
   "displayNameEmpty": "Please enter a display name",
   "members": "$count$ members",
+  "activeMembers": "$count$ active members",
   "join": "Join",
   "joinOpenGroup": "Join Community",
   "createGroup": "Create Group",
