--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -178,6 +178,7 @@
   "messageBody": "Message body",
   "unblockToSend": "Unblock this contact to send a message.",
   "unblockGroupToSend": "This group is blocked. Unlock it if you would like to send a message.",
+  "timer": "Timer",
   "youChangedTheTimer": "You set the disappearing message timer to $time$",
   "timerSetOnSync": "Updated disappearing message timer to $time$",
   "theyChangedTheTimer": "$name$ set the disappearing message timer to $time$",
