--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -195,6 +195,7 @@
   "timerOption_1_week": "1 week",
   "timerOption_2_weeks": "2 weeks",
   "disappearingMessages": "Disappearing messages",
+  "disappearingMessagesSubtitle": "This setting applies to everyone in this conversation",
   "set": "Set",
   "changeNickname": "Change Nickname",
   "clearNickname": "Clear Nickname",
