feat: added basic support for different disappearing message modes
added expirationType and lastDisappearingMessageChangeTimestamp to conversations table, left a few comments for future work

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -197,6 +197,12 @@
   "timerOption_2_weeks": "2 weeks",
   "disappearingMessages": "Disappearing messages",
   "disappearingMessagesSubtitle": "This setting applies to everyone in this conversation",
+  "disappearingMessagesModeLabel": "Delete Type",
+  "disappearingMessagesModeOff": "Off",
+  "disappearingMessagesModeAfterRead": "Disappear After Read",
+  "disappearingMessagesModeAfterReadSubtitle": "Messages delete after they have been read.",
+  "disappearingMessagesModeAfterSend": "Disappear After Send",
+  "disappearingMessagesModeAfterSendSubtitle": "Messages delete after they have been sent.",
   "set": "Set",
   "changeNickname": "Change Nickname",
   "clearNickname": "Clear Nickname",
