--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -181,9 +181,8 @@
   "timer": "Timer",
   "timerModeRead": "read",
   "timerModeSent": "sent",
-  "youChangedTheTimer": "You have changed messages to disappear $time$ after they have been $mode$",
-  "timerSetOnSync": "Updated disappearing message timer to $time$",
-  "theyChangedTheTimer": "$name$ has changed messages to disappear $time$ after they have been $mode$",
+  "youChangedTheTimer": "You have set messages to disappear $time$ after they have been $mode$",
+  "theyChangedTheTimer": "$name$ has set messages to disappear $time$ after they have been $mode$",
   "timerOption_0_seconds": "Off",
   "timerOption_5_seconds": "5 seconds",
   "timerOption_10_seconds": "10 seconds",
@@ -197,19 +196,6 @@
   "timerOption_1_day": "1 day",
   "timerOption_1_week": "1 week",
   "timerOption_2_weeks": "2 weeks",
-  "disappearingMessages": "Disappearing messages",
-  "disappearingMessagesSubtitle": "This setting applies to everyone in this conversation",
-  "disappearingMessagesModeLabel": "Delete Type",
-  "disappearingMessagesModeOff": "Off",
-  "disappearingMessagesModeAfterRead": "Disappear After Read",
-  "disappearingMessagesModeAfterReadSubtitle": "Messages delete after they have been read.",
-  "disappearingMessagesModeAfterSend": "Disappear After Send",
-  "disappearingMessagesModeAfterSendSubtitle": "Messages delete after they have been sent.",
-  "set": "Set",
-  "changeNickname": "Change Nickname",
-  "clearNickname": "Clear Nickname",
-  "nicknamePlaceholder": "New Nickname",
-  "changeNicknameMessage": "Enter a nickname for this user",
   "timerOption_0_seconds_abbreviated": "off",
   "timerOption_5_seconds_abbreviated": "5s",
   "timerOption_10_seconds_abbreviated": "10s",
@@ -223,10 +209,23 @@
   "timerOption_1_day_abbreviated": "1d",
   "timerOption_1_week_abbreviated": "1w",
   "timerOption_2_weeks_abbreviated": "2w",
+  "disappearingMessages": "Disappearing messages",
+  "disappearingMessagesSubtitle": "This setting applies to everyone in this conversation",
+  "disappearingMessagesModeLabel": "Delete Type",
+  "disappearingMessagesModeOff": "Off",
+  "disappearingMessagesModeAfterRead": "Disappear After Read",
+  "disappearingMessagesModeAfterReadSubtitle": "Messages delete after they have been read.",
+  "disappearingMessagesModeAfterSend": "Disappear After Send",
+  "disappearingMessagesModeAfterSendSubtitle": "Messages delete after they have been sent.",
   "disappearingMessagesDisabled": "Disappearing messages disabled",
   "disabledDisappearingMessages": "$name$ has turned off disappearing messages.",
-  "youDisabledDisappearingMessages": "You disabled disappearing messages.",
+  "youDisabledDisappearingMessages": "You have turned off disappearing messages.",
   "timerSetTo": "Disappearing message time set to $time$",
+  "set": "Set",
+  "changeNickname": "Change Nickname",
+  "clearNickname": "Clear Nickname",
+  "nicknamePlaceholder": "New Nickname",
+  "changeNicknameMessage": "Enter a nickname for this user",
   "noteToSelf": "Note to Self",
   "hideMenuBarTitle": "Hide Menu Bar",
   "hideMenuBarDescription": "Toggle system menu bar visibility.",
