feat: added legacy mode timer notification copy

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -182,7 +182,9 @@
   "timerModeRead": "read",
   "timerModeSent": "sent",
   "youChangedTheTimer": "You have set messages to disappear $time$ after they have been $mode$",
+  "youChangedTheTimerLegacy": "You set the disappearing message timer to $time$",
   "theyChangedTheTimer": "$name$ has set messages to disappear $time$ after they have been $mode$",
+  "theyChangedTheTimerLegacy": "$name$ set the disappearing message timer to $time$",
   "timerOption_0_seconds": "Off",
   "timerOption_5_seconds": "5 seconds",
   "timerOption_10_seconds": "10 seconds",
