feat: added function for calculating the expire start time
updated copy for setting change messages

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -179,9 +179,11 @@
   "unblockToSend": "Unblock this contact to send a message.",
   "unblockGroupToSend": "This group is blocked. Unlock it if you would like to send a message.",
   "timer": "Timer",
-  "youChangedTheTimer": "You set the disappearing message timer to $time$",
+  "timerModeRead": "read",
+  "timerModeSent": "sent",
+  "youChangedTheTimer": "You have changed messages to disappear $time$ after they have been $mode$",
   "timerSetOnSync": "Updated disappearing message timer to $time$",
-  "theyChangedTheTimer": "$name$ set the disappearing message timer to $time$",
+  "theyChangedTheTimer": "$name$ has changed messages to disappear $time$ after they have been $mode$",
   "timerOption_0_seconds": "Off",
   "timerOption_5_seconds": "5 seconds",
   "timerOption_10_seconds": "10 seconds",
