feat: added notice banner component
show notice when conversation is in legacy mode, extracted some UI components from the ConversationHeader, updated featureReleaseTimestamp

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -211,6 +211,7 @@
   "timerOption_2_weeks_abbreviated": "2w",
   "disappearingMessages": "Disappearing messages",
   "disappearingMessagesSubtitle": "This setting applies to everyone in this conversation",
+  "disappearingMessagesModeOutdated": "$name$ is using an outdated client. Disappearing messages may not work as expected.",
   "disappearingMessagesModeLabel": "Delete Type",
   "disappearingMessagesModeOff": "Off",
   "disappearingMessagesModeAfterRead": "Disappear After Read",
