--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -513,5 +513,7 @@
   "reactionPopupThree": "$name$, $name2$ & $name3$",
   "reactionPopupMany": "$name$, $name2$, $name3$ &",
   "reactionListCountSingular": "And $otherSingular$ has reacted <span>$emoji$</span> to this message",
-  "reactionListCountPlural": "And $otherPlural$ have reacted <span>$emoji$</span> to this message"
+  "reactionListCountPlural": "And $otherPlural$ have reacted <span>$emoji$</span> to this message",
+  "settingAppliesToEveryone": "This setting applies to everyone in this conversation.",
+  "onlyGroupAdminsCanChange": "Only group admins can change this setting."
 }
