feat: add block/decline logic to msg request & wrapper

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -240,8 +240,8 @@
   "multipleJoinedTheGroup": "$name$ joined the group.",
   "kickedFromTheGroup": "$name$ was removed from the group.",
   "multipleKickedFromTheGroup": "$name$ were removed from the group.",
-  "blockUser": "Block",
-  "unblockUser": "Unblock",
+  "block": "Block",
+  "unblock": "Unblock",
   "unblocked": "Unblocked",
   "blocked": "Blocked",
   "blockedSettingsTitle": "Blocked Contacts",
