feat: image reply done
added localisation for attachment description

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -83,6 +83,7 @@
   "you": "You",
   "audioPermissionNeededTitle": "Microphone Access Required",
   "audioPermissionNeeded": "You can enable microphone access under: Settings (Gear icon) => Privacy",
+  "image": "Image",
   "audio": "Audio",
   "video": "Video",
   "photo": "Photo",
