feat: converted quoteiconcontainer and to styled components
added support for generic file icon with consistent design. Still need to support know file types and metdata from the generic file component

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -45,6 +45,7 @@
   "incomingError": "Error handling incoming message",
   "media": "Media",
   "mediaEmptyState": "No media",
+  "document": "Document",
   "documents": "Documents",
   "documentsEmptyState": "No documents",
   "today": "Today",
